Tries to fix alignment between the nav text sourcehut's logo.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -159,7 +159,7 @@ nav {
   }
 
   width: 0.4em;
-  vertical-align: -0.2em;
+  vertical-align: -0.17em;
 }
 
 form {
